# chatbot

./: .gitignore  pyproject.toml  requirements.txt
app/: database.sqlite  db.py  main.py  security.py  test-api.http  test.py
app/api/: deps.py  main.py
app/api/router/: blackbox.py  chatgpt.py  users.py
app/handlers/: blackbox.py  users.py
app/models/: perflexity.py  users.py
app/template/: template.py
app/views/: index.html
app/views/chatbot/: chatbot.html
app/views/signup/: signup.html
