[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = ""
authors = ["RajaSunrise <rajasunsrise@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
socketify = "^0.0.27"
sqlmodel = "^0.0.16"
rich = "^13.7.1"
appdirs = "^1.4.4"
click = "^8.1.7"
python-jose = "^3.3.0"
python-multipart = "^0.0.9"
requests = "^2.31.0"
passlib = "^1.7.4"
uvicorn = "^0.29.0"
pydantic = {version = "^2.7.0", extras = ["email"]}
g4f = "^4.0.0"
nest_asyncio = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
